fix: add z-index 100 to downloaderoverlay

--- a/src/styles/containers/SiteInfo.scss
+++ b/src/styles/containers/SiteInfo.scss
@@ -10,6 +10,7 @@
 	}
 
 	.DownloaderOverlay {
+		z-index: 100;
 		position: absolute;
 		display: flex;
 		flex-direction: column;
